# dash

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  ez  imgui.ini
.zed/: debug.json
resources/levels/: data.json
resources/levels/1/: level.json
resources/levels/2/: level.json
resources/levels/3/: level.json
resources/levels/fireman/: level.json
src/: main.cpp
src/entity/: entity.cpp  entity.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp
src/entity/world/: finish.cpp  finish.hpp  platform.cpp  platform.hpp  spike.cpp  spike.hpp  static.cpp  static.hpp
src/game/: game.cpp  game.hpp  object.cpp  object.hpp
src/level/: level.cpp  level.hpp
src/physics/: rigidbody.cpp  rigidbody.hpp
src/player/: player.cpp  player.hpp
src/ui/: helper.cpp  helper.hpp  modal.hpp  theme.hpp  ui.cpp  ui.hpp
src/ui/modals/: death.cpp  death.hpp  debug.cpp  debug.hpp  editor.cpp  editor.hpp  finish.cpp  finish.hpp  level.cpp  level.hpp  menu.cpp  menu.hpp  pause.cpp  pause.hpp  player.cpp  player.hpp  playfield.cpp  playfield.hpp
src/utils/: json.hpp  math.hpp
